dumme dumme java versjon som e for gammal æsj